kustomizations/prod/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prod-frontend
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://thaillm.or.th"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Origin, Keep-Alive, User-Agent, X-CustomHeader, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Accept, x-api-key"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-body-size: 10g
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 'thaillm.or.th'
    - '*.thaillm.or.th'
    secretName: thaillm-tls
  rules:
  - host: thaillm.or.th
    http:
      paths:
      - path: /medical
        pathType: Prefix
        backend:
          service:
            name: prod-frontend
            port:
              number: 80
      - path: /medical-siriraj
        pathType: Prefix
        backend:
          service:
            name: prod-frontend-siriraj
            port:
              number: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prod-backend
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://thaillm.or.th"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Origin, Keep-Alive, User-Agent, X-CustomHeader, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Accept, x-api-key"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-body-size: 10g
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 'thaillm.or.th'
    - '*.thaillm.or.th'
    secretName: thaillm-tls
  rules:
  - host: thaillm.or.th
    http:
      paths:
      - path: /medical-api
        pathType: Prefix
        backend:
          service:
            name: prod-backend
            port:
              number: 80
      - path: /medical-siriraj-api
        pathType: Prefix
        backend:
          service:
            name: prod-backend-siriraj
            port:
              number: 80
